style.css
@font-face {
	font-family: "Source Sans Pro";
	font-style: normal;
	font-weight: 400;
	font-display: fallback;
	src: local("Source Sans Pro"), local("SourceSansPro-Regular"),
	     url(fonts/SourceSansPro-Regular.woff2) format("woff2"),
	     url(fonts/SourceSansPro-Regular.woff) format("woff");
}
body {
	background-color: #3a3a3a;
	color: #bbb;
	font-family: "Source Sans Pro", sans-serif;
	font-size: 112.5%;
	line-height: 1;
	margin: 0;
	padding: 0;
}
nav, main, section, article {
	display: block;
}
iframe {
	width: 100%;
	border: none;
}
#side {
	background-color: #2b2b2b;
}
#head, #nav {
	display: block;
	box-sizing: border-box;
	margin: 0;
}
#head {
	text-align: center;
	background-color: #1f1f1f;
	padding: 5% 0;
	overflow: hidden;
}
#nav {
	display: flex;
	justify-content: space-evenly;
	line-height: 3;
	list-style-type: none;
	padding: 0;
}
#main {
	padding: 5% 5% 15%;
	max-width: 32em;
}
#logo {
	display: none;
}
#title {
	display: block;
	width: 100%;
}
#head a {
	display: inline-block;
	vertical-align: middle;
	width: 35%;
	color: #f65;
}
#nav a {
	display: block;
	padding: 0 1em;
}
@media screen and (min-width: 800px) {
	#side {
		position: fixed;
		top: 0;
		left: 0;
		height: 100%;
		width: 20%;
	}
	#head {
		padding: 25% 0;
	}
	#head a {
		width: 58%;
	}
	#main {
		width: 70%;
		margin-left: 20%;
	}
	#nav {
		display: block;
		height: 100%;
	}
	#nav a {
		padding: 0 20%;
	}
	#logo {
		display: block;
		width: 60%;
		height: auto;
		margin: 0 auto 20%;
		aspect-ratio: 6 / 5;
	}
	.selected {
		background-color: #3a3a3a;
	}
}
@media screen and (min-width: 1400px) {
	#side {
		width: 32%;
	}
	#head {
		height: 100%;
		width: 62.5%;
	}
	#nav {
		position: absolute;
		top: 0;
		right: 0;
		width: 37.5%;
	}
	#head, #nav {
		padding: 16% 0;
	}
	#main {
		width: 58%;
		margin-left: 32%;
	}
	#nav a {
		padding: 0 30%;
	}
}
a {
	color: #fa5;
	text-decoration: none;
}
a:hover {
	color: #f65;
}
a:active {
	outline: none;
}
h1, h2, h3, h4, h5, h6 {
	color: #ddd;
	line-height: 1.2;
	margin: 2.8em 0 0.8em;
	font-weight: normal;
}
h2 {
	color: #aaa;
	font-size: 1.94444444em;
}
section:first-child h2:first-child {
	margin-top: 0.2em;
}
h3 {
	font-size: 1.66666667em;
}
h4, h5, h6 {
	font-size: 1em;
	line-height: 1.55555556;
	margin: 0 0 0.5em;
}
p, ul {
	line-height: 1.55555556;
	margin: 0 0 1.55555556em;
}
ul {
	list-style-type: circle;
}
img {
	border: none;
	vertical-align: bottom;
	max-width: 100%;
	height: auto;
}
time {
	display: block;
	color: #aaa;
	margin: -1em 0 1em;
	white-space: nowrap;
}
.rounded {
	border-radius: 1.11111111em;
}
.button {
	display: inline-block;
	padding: 0.333333333em 1.11111111em;
	background-color: #fa5;
	color: #000;
	border-radius: 1.11111111em;
}
.button:hover {
	background-color: #f85;
	color: #000;
}
.button:active {
	background-color: #f65;
}
br + .button {
	margin-top: 1.11111111em;
}
.hover-swap:not(:hover) :last-child {
	display: none;
}
.hover-swap:hover :first-child {
	display: none;
}

